# Solana-Anchor-Counter

./: Anchor.toml
programs/anchor-counter/: Cargo.toml
programs/anchor-counter/src/: lib.rs
tests/: anchor-counter.ts
